# bridge

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  api.ts  cli.ts  config.ts  database.db  docker-compose.yml  dump.rdb  eslint.config.ts  go.mod  go.sum  hook.js  hooks.ts  index.ts  package-lock.json  package.json  process.ps1  process.sh  redis.conf  render.yaml  server.ts  start.bat  start.mjs  start.ps1  start.sh  tsconfig.json
.github/: labeler.yml
api/: Cargo.toml  README.md  go.mod  go.sum  handler.ts  index.ts  main.go
bot/: client.mjs  config.mjs  package.json
core/: .gitignore  README.md  auth.ts  index.ts  install.js  package.json  seralize.ts  tsconfig.json  util.ts
hooks/: libsignal.ts
instance/: README.md  client.mjs  client.ts  config.mjs  config.ts  drizzle.config.mjs  drizzle.config.ts  dump.rdb  package.json
service/: Cargo.toml  astro.config.mjs  handler.ts  middleware.ts  package.json  predicates.ts  sql.ts  tailwind.config.mjs  types.ts  worker.ts
service/auth/: session.ts  types.ts
service/class/: Client.ts  Message.ts  Plugins.ts
service/plugin/: group.ts  media.ts  mention.ts  tiktok.ts
service/src/: logger.rs  main.rs  security.rs
service/src/layouts/: Layout.astro
service/src/lib/: api.ts
service/src/manager/: mod.rs  supervisor.rs
service/src/pages/: index.astro
service/src/pages/dashboard/: [id].astro
service/src/routes/: admin.rs  auth.rs  logs.rs  mod.rs  pair.rs  settings.rs  stats.rs  tools.rs  user.rs  util.rs
service/src/sql/: mod.rs
service/src/styles/: global.css
service/store/: main.sql
service/util/: main.ts
util/: Cargo.toml  Makefile
util/src/: lib.rs
(+286 files in other folders)
