[package]
name = "whatsaly-api"
version = "0.1.0"
description = "API Service Client"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full", "net"] }
tokio-stream = { version = "0.1", features = ["time"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }
redis = { version = "1.0", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.5"
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
sysinfo = "0.32"
prost-types = "0.13"
anyhow = "1.0.100"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
dotenv = "0.15.0"
colored = "2"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
hmac = "0.12"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"