[package]
name = "util"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
infer = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestRedirect",
    "Response",
    "Headers",
    "Window",
] }
regex = "1.12.2"
